SSE setup
